interpreter/__snapshots__/interpreter_errors_test.snap

[TestShowUnboundVar - 1]
  1 |   source = $unbound_var
    |            ~~~~~~~~~~~~
---

[TestShowMissingFundsSingleAccount - 1]
  1 |   source = @a
    |            ~~
---

[TestShowMissingFundsInorder - 1]
  1 |   source = {
    |            ~
  2 |     @a
    | ~~~~~~
  3 |     @b
    | ~~~~~~
  4 |  }
    | ~~
---

[TestShowMissingFundsAllotment - 1]
  2 |     1/2 from @a
    |              ~~
---

[TestShowMissingFundsMax - 1]
  1 |   source = max [COIN 2] from {
    |            ~~~~~~~~~~~~~~~~~~~
  2 |     1/2 from @world
    | ~~~~~~~~~~~~~~~~~~~
  3 |     remaining from @world
    | ~~~~~~~~~~~~~~~~~~~~~~~~~
  4 |   }
    | ~~~
---

[TestShowMetadataNotFound - 1]
  1 |   number $my_var = meta(@acc, "key")
    |                    ~~~~~~~~~~~~~~~~~
---

[TestShowTypeError - 1]
  0 | send 42 (
    |      ~~
---

[TestShowInvalidTypeErr - 1]
  1 |   invalid_t $x
    |   ~~~~~~~~~
---
